--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,145 @@
-body{
-    background-color: blue;
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+
+.header{
+    background-color: #1f2937;
+    color: #fff;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 25px 80px;
+}
+
+.header h2{
+    font-size: 24px;
+    color: #f9faf8;
+}
+
+.menu ul{
+    list-style: none;
+    display: flex;
+    gap: 15px;
+    color: #e5e7eb;   
+    font-size: 18px; 
+}
+
+.menu a{
+    color: #e5e7eb;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+.hero{
+    background-color: #1f2937;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    padding: 90px;
+}
+
+.hero h1{
+    font-size: 48px;
+    color: #f9faf8;
+}
+
+.hero p{
+    font-size: 18px;
+    color: #e5e7eb;
+    width: 250px;
+    margin: 15px 0px;
+}
+
+
+.hero img{
+    width: 400px;
+    height: 250px;
+}
+
+button{
+    padding: 10px 35px;
+    font-size: 1.1em;
+    border: 3px solid #f9faf8;
+    border-radius: 8px;
+    background-color: #3882f6;
+}
+
+button a{
+    color: #fff;
+    font-weight: bold;
+    text-decoration: none;
+    text-align: center;
+}
+
+.content h2{
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    text-align: center;
+    margin: 30px auto;
+}
+.card img{
+    width: 160px;
+    height: 180px;
+    border: 5px solid #3882f6;
+    border-radius: 10px;
+}
+
+.card p{
+    text-align: center;
+}
+.info{
+    width: 800px;
+    display: flex;
+    justify-content: center;
+    margin: 40px auto;
+    gap: 40px;
+}
+
+.quote{
+    padding: 200px 300px;
+    background-color:#e5e7eb;
+    color: #1f2937;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+}
+
+.action{
+    margin: 60px auto;
+    display: flex;
+    justify-content: center;
+}
+
+.action-box{
+    background-color: #3882f6;
+    border-radius: 8px;
+    padding: 40px;
+    display: flex;
+    justify-content: space-between;
+    gap: 60px;
+}
+
+.action-text{
+    font-size: 1.3em;
+    color: #e5e7eb;
+}
+
+.footer{
+    padding: 40px;
+    background-color: #1f2937;
+    color: #f9faf8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer a{
+    color: #e5e7eb;
+    text-decoration: none;
+    font-weight: bold;
 }
