--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,13 +9,14 @@
     background-color: #1f2937;
     color: #fff;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    padding: 25px 80px;
+    gap: 700px;
+    padding: 25px 90px;
 }
 
 .header h2{
-    font-size: 24px;
+    font-size: 36px;
     color: #f9faf8;
 }
 
@@ -73,6 +74,10 @@ button a{
     font-weight: bold;
     text-decoration: none;
     text-align: center;
+}
+
+button:hover{
+    background-color: #295090;
 }
 
 .content h2{
